# fontra

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AUTHORS.txt  CHANGELOG.md  CONTRIBUTORS.txt  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  rollup.config.js  setup.cfg  setup.py  webpack.config.cjs
.github/: dependabot.yml
.github/workflows/: codeql.yml  node.js.yml  pytest.yml  test.yml
client/: index.html  main.css
client/css/: main.css  slider.css  ui-list.css
client/html/: fontra.html  jafo.html  trafo.html
client/src/: app-controller.js  application.js  caching-font.js  canvas-controller.js  changes.js  convex-hull.js  editor-controller.js  errors.js  font-controller.js  font.js  glyph-controller.js  landing-controller.js  lru-cache.js  math-array.js  math-path.js  mouse-tracker.js  rectangle.js  remote.js  scene-controller.js  scene-draw-funcs.js  scene-graph.js  scene-model.js  scene-view.js  scene.js  set-ops.js  test-glyphs.js  transform.js  ui-list.js  ui-sliders.js  utils.js  var-array.js  var-funcs.js  var-glyph.js  var-model.js  var-path.js
client/test/: lru-cache.js  math-array.js  math-path.js  test-changes.js  test-var-model.js  transform.js  var-array.js  var-funcs.js  var-model.js  var-path.js
common/test-data/: apply-change-test-data.json  apply-changes-test-data.json
docs/: client-classes.md  code-diagrams.md  localization.md  plugin-structure.md
icons/: build-icon-font.sh  buildAll.py  bulls-eye.py  bullsEye.py  export-icons-as-svg.py  info.py  layers.py  magnifying-glass.py  magnifyingGlass.py  sliders.py  text-tool.py  textT.py
icons/fontra-icons.ufo/: features.fea  fontinfo.plist  layercontents.plist  lib.plist
icons/fontra-icons.ufo/glyphs/: _cursor-rotate-hotspot-0-0.glif  _cursor-rotate-temp.glif  _geartooth.glif  aligncenter.glif  alignleft.glif  alignright.glif  b.glif  bullseye.glif  c.glif  contents.plist  cursor-rotate-bottom-center.glif  cursor-rotate-bottom-left.glif  cursor-rotate-bottom-right.glif  cursor-rotate-down-right.glif  cursor-rotate-left-down.glif  cursor-rotate-left-right-bottom.glif  cursor-rotate-left-right-top.glif  cursor-rotate-left-top.glif  cursor-rotate-middle-left.glif  cursor-rotate-middle-right.glif  cursor-rotate-top-center.glif  cursor-rotate-top-down-left.glif  cursor-rotate-top-down-right.glif  cursor-rotate-top-left.glif  cursor-rotate-top-right.glif  d.glif  f.glif  gear.glif  hand.glif  info.glif  j.glif  k.glif  kerningtool.glif  knifetool.glif  l.glif  layers.glif  magnifyingglass.glif  minus.glif  ovaltool.glif  p.glif  (+25 more)
icons/fontra-icons.ufo/glyphs.background/: contents.plist  gear.glif  hand.glif  reference.glif  ruler.glif
icons/fontra-icons.ufo/glyphs.mask/: contents.plist  ruler.glif
scripts/: bundler_build_hook.py  jsdeps.py  jsdeps_build_hook.py  rebuild_classes_json.sh  rebuild_glyph_data_csv.py  rebuild_glyphset_presets.py  rebuild_languages.py  rebuild_unicode_scripts_blocks_data.py  rebuild_unicode_scripts_data.py  rebuild_unicode_usedby_table.py  rewrite-js-imports.js  rollup_build_hook.py
server/src/fontra/: __main__.py  changes.py  font.py  fonthandler.py  projectmanager_fs.py  projectmanager_rcjk.py  remote.py  server.py  websocket.py  ws_server.py
server/test/: test_changes.py  test_font.py
src-js/fontra-core/: package.json  webpack.config.cjs
src-js/fontra-core/src/: application-settings.js  backend-api.js  canvas-controller.js  change-recorder.js  changes.js  classes.js  classes.json  cmap.js  convex-hull.js  cross-axis-mapping.js  customData.js  discrete-variation-model.js  event-utils.js  fit-cubic.js  fontra-menus.js  (+42 more)
src-js/fontra-webcomponents/: package.json
src-js/projectmanager-filesystem/: landing.html  package.json
src-js/views-applicationsettings/: applicationsettings.html  package.json
src-js/views-editor/: editor.html  package.json
src-js/views-fontinfo/: fontinfo.html  package.json
src-js/views-fontoverview/: fontoverview.html  package.json
src/fontra/: __main__.py
templates/: editor.html  landing.html
test-common/: apply-change-test-data.json  collect-change-paths-test-data.json  filter-change-pattern-test-data.json  match-change-pattern-test-data.json  path-change-test-data.json  url-fragment-test-data.json
test-js/: test-async-utils.js  test-change-recorder.js  test-changes.js  test-classes.js  test-cmap.js  test-cross-axis-mapping.js  test-discrete-variation-model.js  test-fit-cubic.js  test-font-sources-controller.js  test-font-sources-instancer.js  test-formatters.js  test-glyph-controller.js  test-glyph-data.js  test-glyph-svg.js  test-lru-cache.js  test-multiple-axis-mapping.js  test-observable-object.js  test-path-changes.js  test-path-functions.js  test-path-hit-tester.js  test-queue-iterator.js  test-rectangle.js  test-support.js  test-svg-glyph.js  test-transform.js  test-unicode-scripts-blocks.js  test-unicode-scripts.js  test-unicode-utils.js  test-utils.js  test-value-controller.js  test-var-array.js  test-var-funcs.js  test-var-glyph.js  test-var-model.js  test-var-path.js
test-py/: conftest.py  testSupport.py  test_actions.py  test_add_version_token.py  test_backend_copy.py  test_backend_designspace.py  test_backend_fontra.py  test_backends_copy.py  test_backends_designspace.py  test_backends_filenames.py  test_backends_fontra.py  test_backends_null.py  test_backends_opentype.py  test_backends_workflow.py  test_changes.py  test_classes.py  test_clipboard.py  test_discretevariationmodel.py  test_filewatcher.py  test_font.py  test_fonthandler.py  test_fontra_third_party_modules.py  test_glyph_data_csv.py  test_glyphdependencies.py  test_glyphnames.py  test_instancer.py  test_lrucache.py  test_path.py  test_path_changes.py  test_path_io.py  test_pathops.py  test_protocols.py  test_unicode.py  test_unicode_scripts_blocks_data.py  test_unicode_scripts_data.py  test_unicode_usedby_table.py  test_urlfragment.py  test_varutils.py  test_workflow.py  test_workflow_features.py  (+1 more)
types/: axes.d.ts  change.d.ts  remotefont.d.ts  var-glyph.d.ts
(+1245 files in other folders)
