[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "fontra"
description = "A browser-based font editor"
readme = "README.md"
authors = [
    { name = "Just van Rossum", email = "justvanrossum@gmail.com" }
]
keywords = ["font", "fonts"]
license = {text = "GNU General Public License v3"}
dependencies = [
    "aiohttp>=3.8.1",
    "dacite>=1.6.0",
    "fonttools[ufo,unicode]>=4.37.2",
    "watchfiles>=0.10",
]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]


[project.urls]
Documentation = "https://github.com/BlackFoundryCom/fontra#readme"
Issues = "https://github.com/BlackFoundryCom/fontra/issues"
Source = "https://github.com/BlackFoundryCom/fontra"


[project.scripts]
fontra = "fontra.__main__:main"


[project.entry-points."fontra.views"]
editor = "fontra.views.editor"


[project.entry-points."fontra.projectmanagers"]
filesystem = "fontra.filesystem.projectmanager:FileSystemProjectManagerFactory"


[project.entry-points."fontra.webcontent"]
filesystem = "fontra.filesystem"


[project.entry-points."fontra.filesystem.backends"]
designspace = "fontra.backends.designspace:DesignspaceBackend"
ufo = "fontra.backends.designspace:UFOBackend"
ttf = "fontra.backends.opentype:OTFBackend"
otf = "fontra.backends.opentype:OTFBackend"


[tool.hatch.build.targets.wheel]
packages = ["src/fontra"]


[tool.hatch.build]
include = [
    "*.css",
    "*.html",
    "*.html",
    "*.ico",
    "*.js",
    "*.json",
    "*.md",
    "*.py",
    "*.svg",
    "*.txt",
    "*.woff2",
    "/src",
    "/test-py",
]


[tool.hatch.version]
source = "vcs"


[tool.hatch.build.hooks.vcs]
version-file = "src/fontra/_version.py"


[tool.hatch.envs.default]
dependencies = [
  "pytest-asyncio",
  "pytest-cov",
  "pytest",
]


[tool.hatch.envs.default.scripts]
pytest-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/fontra --cov=test-py"


[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]


[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/fontra/_version.py",
]


[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.pytest.ini_options]
testpaths = [
    "test-py",
]
asyncio_mode = "auto"
